Directories index, missing template error and relative path fixes.
- Added index page for directories;
- Added missing template error management;
- Fixed multi-levels relative paths and special chars management.

--- a/templates/default.html
+++ b/templates/default.html
@@ -20,6 +20,7 @@
             margin-left: 270px;
             padding: 20px;
         }
+        .nav-nested { margin-left: 20px; }
     </style>
 </head>
 <body>
@@ -29,6 +30,15 @@
             {% for page in pages %}
                 <li class="nav-item">
                     <a class="nav-link{% if page.rel_path == current_page %} active{% endif %}" href="{{ page.rel_path }}">{{ page.title }}</a>
+                    {% if page.sub_pages %}
+                        <ul class="nav flex-column nav-nested">
+                            {% for sub_page in page.sub_pages %}
+                                <li class="nav-item">
+                                    <a class="nav-link{% if sub_page.rel_path == current_page %} active{% endif %}" href="{{ sub_page.rel_path }}">{{ sub_page.title }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
                 </li>
             {% endfor %}
         </ul>
