Display the project title for each project in the navigation.
- Added the project title for each project in the navigation;
- Fixed broken active status of parent navigation links;
- Added a Jinja filter has_active_subpage plus a global env var;
- A bit of code cleaning in the template;
- Updated unit tests for the recent changes;

TODO: Some asserts in the unit tests are broken.

--HG--
branch : dev

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,3 +56,15 @@ h2, h3, h4, h5, h6 {
 .nav-item .nav-item .nav-link {
   padding-left: 0;
 }
+.sidebar .nav-item.active > a {
+/*
+    font-weight: bold;
+    color: #007bff;
+    background-color: #f8f9fa;
+*/
+}
+.sidebar .nav-item.active .nav-link {
+/*
+    color: #007bff;
+*/
+}
