Implement a root folder index listing the projects.
--HG--
branch : dev

--- a/templates/default.html
+++ b/templates/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ lang }}" data-bs-theme="{{ theme_mode }}">
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }} - {{ app_name }}</title>
+    <title>{{ title }} - DocMD</title>
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="{{ assets_path }}/img/favicon-57x57.png" type="image/png" />
     <link rel="apple-touch-icon" sizes="60x60" href="{{ assets_path }}/img/favicon-60x60.png" type="image/png" />
