--- a/static/css/style-dark.css
+++ b/static/css/style-dark.css
@@ -4,7 +4,7 @@
 
 body, html {
 /*
-	background-color: #111111;
+  background-color: #111111;
   color: #fff;
 */
 }
@@ -24,23 +24,31 @@ footer {
 .nav-nested {
 }
 
+.content header {
+}
 h2, h3, h4, h5, h6 {
   color: #CCD5DE;
 }
 .content h1:not(:first-child) {
   color: #CCD5DE;
 }
-.content h1:first-child {
+.content header, .content h1:first-child {
   border-bottom-color: rgba(0,0,0,0.25);
 }
-.sidebar h2:first-child {
+.sidebar header {
   border-bottom-color: #1E1E1E;
+}
+.sidebar h2:first-child {
+  color: #5A626D;
+}
+.sidebar h3 {
+  color: #7B8591;
 }
 
 .nav .nav-link.active, .nav .show > .nav-link {
-	color: var(--bs-nav-pills-link-active-color);
-	background-color: var(--bs-nav-pills-link-active-bg);
+  color: var(--bs-nav-pills-link-active-color);
+  background-color: var(--bs-nav-pills-link-active-bg);
 }
 .nav .nav-link.current, .nav .current > .nav-link {
-	color: #FCFCFC;
+  color: #FCFCFC;
 }
