--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,12 +8,12 @@ main {
     width: 100%;
 }
 .sidebar {
-	height: 90vh;
-	padding: 20px 5px;
-	border-right: 1px solid;
-	overflow-y: auto;
-	flex-basis: 25vw;
-	min-width: 25vw;
+  height: 90vh;
+  padding: 20px 5px;
+  border-right: 1px solid;
+  overflow-y: auto;
+  flex-basis: 25vw;
+  min-width: 25vw;
   width: 25vw;
 }
 .content {
@@ -29,25 +29,40 @@ footer {
 }
 
 .nav-nested {
-  margin-left: 20px;
+	margin-left: 10px;
 }
 
+header {
+  height: 45px;
+}
+.content header {
+  border-bottom: 1px solid;
+  margin-bottom: 10px;
+}
 h2, h3, h4, h5, h6 {
 }
 .content h1:not(:first-child) {
   font-size: calc(1.325rem + .9vw);
 }
 .content h1:first-child {
+}
+.content header h1:first-child {
+  font-size: calc(1.375rem);
+  border-bottom: none;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.sidebar header {
   border-bottom: 1px solid;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
+  color: inherit;
 }
 .sidebar h2:first-child {
+  font-size: calc(1.375rem);
   color: inherit;
-  padding-top: 8px;
-  padding-bottom: 18px;
-  border-bottom: 1px solid;
 }
 .sidebar h3 {
+  font-size: 1.3em;
 }
 
 .sidebar .nav-link {
